CORE-6574: Fix bottom of column chart label being cut off

--- a/socrata.visualizations.columnChart.css
+++ b/socrata.visualizations.columnChart.css
@@ -161,6 +161,7 @@
 .column-chart .labels .label.selected .contents .text {
   padding: 0 0.25rem;
   font-weight: bold;
+  line-height: 1rem;
 }
 
 .column-chart .labels .label .callout {
